@@ -1792,7 +1792,11 @@ tabs.favicons.show:
       - always: Always show favicons.
       - never: Always hide favicons.
       - pinned: Show favicons only on pinned tabs.
-  desc: When to show favicons in the tab bar.
+  desc: >-
+    When to show favicons in the tab bar.
+
+    When switching this from never to always/pinned, note that favicons might
+    not be loaded yet, thus tabs might require a reload to display them.
 
 tabs.last_close:
   default: ignore
